Move Constants class to java8 sourceset